--- a/src/app/stuvation/stuvation.component.html
+++ b/src/app/stuvation/stuvation.component.html
@@ -85,7 +85,7 @@
   <div class="row">
     <div class="col-12" style="margin-top: 1em;">
       <div class="card" style="width: 100%;"
-        *ngFor="let stuvation of stuvationdetails | filterBy:stuvationFilter ; let i = index; "
+        *ngFor="let stuvation of ResponseData | filterBy:stuvationFilter ; let i = index; "
         [ngClass]="{'techarticleRow1' : i%2==0 }">
         <div class="card-body">
 
