--- a/src/app/stuvation/stuvation.component.html
+++ b/src/app/stuvation/stuvation.component.html
@@ -30,17 +30,17 @@
   <div class="col-md-6">
 
     <input type="text" class="form-control filter-input" placeholder="Search with Name.." name="techarticledetails"
-      [(ngModel)]="stuvationFilter.projectTitle" *ngIf="showKeyword" />
+      [(ngModel)]="stuvationFilter.title" *ngIf="showKeyword" />
 
 
-    <input type="text" class="form-control filter-input" placeholder="Search with Article Title.."
-      name="techarticledetails" [(ngModel)]="stuvationFilter.projectType" *ngIf="showArticle" />
+    <!-- <input type="text" class="form-control filter-input" placeholder="Search with Article Title.."
+      name="techarticledetails" [(ngModel)]="stuvationFilter.projectType" *ngIf="showArticle" /> -->
 
     <input type="text" class="form-control filter-input" placeholder="Search with Technology.."
-      name="techarticledetails" [(ngModel)]="stuvationFilter.technologyname" *ngIf="showTechnology" />
+      name="techarticledetails" [(ngModel)]="stuvationFilter.technology" *ngIf="showTechnology" />
 
     <input type="text" class="form-control filter-input" placeholder="Search with sub Technology.."
-      name="techarticledetails" [(ngModel)]="stuvationFilter.subtechname" *ngIf="showSubTech" />
+      name="techarticledetails" [(ngModel)]="stuvationFilter.sub_technology" *ngIf="showSubTech" />
 
 
 
@@ -80,38 +80,35 @@
 
 
 
-
 <div class="container-fluid">
   <div class="row">
     <div class="col-12" style="margin-top: 1em;">
       <div class="card" style="width: 100%;"
-        *ngFor="let stuvation of ResponseData | filterBy:stuvationFilter ; let i = index; "
-        [ngClass]="{'techarticleRow1' : i%2==0 }">
+        *ngFor="let stuvation of ResponseData | filterBy:stuvationFilter ; let i = index;">
         <div class="card-body">
 
           <div class="row" style="margin-top: -20px;">
 
             <div class="col-md-12 col-sm-12 stuv_titl">
-              <div *ngIf="stuvation.projectType!='Innovation'">
-                <h3>Title : {{stuvation.projectTitle}}</h3>
-              </div>
-              <div *ngIf="stuvation.projectType=='Innovation'">
+              <!-- <div *ngIf="stuvation.projectType!='Innovation'">
+                <h3>Title : {{stuvation.title}}</h3>
+              </div> -->
+              <!-- <div *ngIf="stuvation.projectType=='Innovation'">
                 <h3>Idea : {{stuvation.idea}}</h3>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="row">
             <div class="col-md-5 col-sm-12 tec_lft">
-              <b> Project Type </b> : {{stuvation.projectType}}
+              <!-- <b> Project Type </b> : {{stuvation.projectType}} -->
               <br />
-              <b>Project Status</b> : <span style="color: green; font-weight: bold"
-                *ngIf="stuvation.projectStatus=='completed'">{{stuvation.projectStatus
-                }}</span>
-              <span style="color: #da9101; font-weight: bold" *ngIf="stuvation.projectStatus=='ongoing'">{{stuvation.projectStatus
-               }}</span><br />
-              <b>Technology</b> : {{stuvation.technologyname}}
+              <!-- <b>Project Status</b> : <span style="color: green; font-weight: bold"
+                *ngIf="stuvation.project_status=='completed'">{{stuvation.project_status}}</span>
+              <span style="color: #da9101; font-weight: bold" *ngIf="stuvation.project_status=='ongoing'">{{stuvation.project_status
+               }}</span><br /> -->
+              <b>Technology</b> : {{stuvation.technology}}
               <br />
-              <b>Sub-Technology</b> : {{stuvation.subtechname}}
+              <b>Sub-Technology</b> : {{stuvation.sub_technology}}
               <!--  <div *ngIf="stuvation.projectType=='Innovation'">
         <br/>
         <b>Idea</b> : {{stuvation.idea}}
@@ -120,43 +117,43 @@
         
       </div> -->
               <br />
-              <div *ngIf="stuvation.projectStatus=='ongoing'">
+              <div *ngIf="stuvation.project_status=='Ongiong'">
 
-                <b>Prototype Available ?</b> : {{stuvation.prototypeAvailable}}
+                <b>Prototype Available ?</b> :
                 <br />
-                <b>Reference Link</b> : {{stuvation.referenceLink}}
+                <b>Reference Link</b> :
                 <br />
-                <b>Expected Budget</b> : {{stuvation.expectedBudget}}
+                <b>Expected Budget</b> :
                 <br />
-                <b>Team Size</b> : {{stuvation.teamSize}}<br />
-                <b>Student Partner Last Date Of Joining</b> : {{stuvation.lastDateOfJoining}}
+                <b>Team Size</b> : <br />
+                <b>Student Partner Last Date Of Joining</b> :
                 <br />
-                <div *ngIf="stuvation.projectType=='Innovation'">
-                  <b>Idea Description</b> : {{stuvation.ideaDescription}}
-                </div>
+                <!-- <div *ngIf="stuvation.projectType=='Innovation'">
+                  <b>Idea Description</b> : {{stuvation.idea_desc}}
+                </div> -->
 
               </div>
-              <div *ngIf="stuvation.projectType!='Innovation'" style="text-align:justify">
+              <!-- <div *ngIf="stuvation.projectType!='Innovation'" style="text-align:justify">
                 <b>Abstract</b> : {{stuvation.abstract}}
-              </div>
+              </div> -->
 
             </div>
             <div class="col-md-3 col-sm-6 tec_mdl">
 
               <div>
-                <img class="profilepicture" src="../assets/images/profileImages/{{stuvation.profilepicture}}"
-                  alt="Card image cap">
+                <!-- <img class="profilepicture" src="../assets/images/profileImages/{{stuvation.profilepicture}}"
+                  alt="Card image cap"> -->
               </div>
               <div>
-                <b>{{stuvation.originatorname | uppercase}}</b>
+                <!-- <b>{{stuvation.originatorname | uppercase}}</b> -->
                 <br />
-                <span style="font-size: 0.85rem;">{{stuvation.followerCount}} followers</span>
+                <!-- <span style="font-size: 0.85rem;">{{stuvation.followerCount}} followers</span> -->
                 <br />
 
               </div>
 
 
-              <div class="lke-dis">
+              <!-- <div class="lke-dis">
                 <button *ngIf="!checkLoginStatus() && stuvation.upCount!=='0'" class="btn btn-light buttonarticle"
                   (click)="stuvationUpDownCountUpdate(stuvation.stuvationid,'UP')" style="display:inline">
                   {{stuvation.upCount}}
@@ -169,7 +166,7 @@
                   <img src="../assets/images/thumbsDown.png" alt="Card image cap" style="height: 15px;">
 
                 </button>
-              </div>
+              </div> -->
 
 
               <!-- <button *ngIf="!checkLoginStatus()" class="btn btn-light"
@@ -186,7 +183,7 @@
                 <img src="../assets/images/thumbsDown.png" alt="Card image cap" style="height: 1.5em;">
               </button> -->
             </div>
-            <div class="col-md-4 col-sm-12 tec_ryt">
+            <!-- <div class="col-md-4 col-sm-12 tec_ryt">
               <div><b>Created On</b> : {{stuvation.createdon}}</div>
               <br />
 
@@ -207,7 +204,7 @@
                     style="background-color: #33099e; color: white !important;" data-toggle="modal"
                     data-target="#showStuvationDiscussionModal"
                     (click)="showStuvationComments(stuvation)">Discussions</button>
-                </li><br/>
+                </li><br />
                 <li class="nav-item">
                   <button class="nav-link btn btn-light buttonarticle"
                     style="background-color: #FE9404; color: white !important;" data-toggle="modal"
@@ -215,7 +212,7 @@
                     &amp; Join as a Team</button>
                 </li>
               </ul>
-            </div>
+            </div> -->
 
           </div>
 
